Bug: Heighten contrast for readability (#57)
* Update styles for readability

* Rebase

--- a/slides/src/css/main.scss
+++ b/slides/src/css/main.scss
@@ -1,5 +1,5 @@
 @import '~reveal.js/css/reveal.css';
-@import '~highlight.js/styles/atom-one-dark.css';
+@import '~highlight.js/styles/tomorrow-night-blue.css';
 
 // Default mixins and settings -----------------
 @import '~reveal.js/css/theme/template/mixins.scss';
@@ -55,8 +55,8 @@ $heading3Size: 1.55em;
 $heading4Size: 1.00em;
 
 // Links and actions
-$linkColor: $rangleRed;
-$linkColorHover: lighten( $linkColor, 20% );
+$linkColor: lighten( $rangleRed, 20% );
+$linkColorHover: lighten( $rangleRed, 40% );
 
 // Text selection
 $selectionBackgroundColor: $rangleRed;
@@ -136,5 +136,9 @@ $selectionColor: #fff;
     background-color: $purpleDark;
     padding: 0 5px;
     font-size: 0.8em;
+  }
+
+  .progress span {
+    background: $rangleRed;
   }
 }
